# freelance-revenue-os

./: .claude.json  .env.example  .gitattributes  .gitconfig.burrow  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.canopy/: agent.json
.claude/: .credentials.json  .last-cleanup  settings.json
.claude/backups/: .claude.json.backup.1780576866666
.claude/hooks/: suggest-handoff.js  warren-guard.js
.claude/projects/-workspace/: cbc38c75-95d8-4870-821e-7f7a3e467a62.jsonl
.claude/sessions/: 2.json
.claude/shell-snapshots/: snapshot-bash-1780576877235-1dkkqn.sh
.config/uv/: uv-receipt.json
.warren/: config.yaml  pr-template.md  preview.yaml  project.json  triggers.yaml
config/: banned_phrases.yaml  portfolio.example.yaml  scoring_rules.example.toml  scoring_rules.toml  settings.example.toml  sources.example.yaml
config/presets/: test-preset.toml
docs/: ARCHITECTURE.md  BACKLOG.md  HANDOFF.md  OPERATOR_MANUAL.md  PRD.md  SAFETY_POLICY.md  lead-sources.md  niche-strategy.md  pull-build-spec.md  source-catalog.md  warren-project-contract.md  warren-runbook.md
scripts/: wr-agents.sh  wr-cancel.sh  wr-dispatch-current-repo.sh  wr-env.sh  wr-events.sh  wr-health.sh  wr-projects.sh  wr-refresh.sh  wr-run-status.sh  wr-run.sh  wr-steer.sh
src/freelance_os/: __init__.py  cli.py  config.py  db.py  models.py  schemas.py  sources.py
tests/: conftest.py  test_board.py  test_categorization.py  test_client_workspace.py  test_config_safety.py  test_dashboard.py  test_email_ingestion.py  test_execution_harness.py  test_feasibility.py  test_ingest.py  test_init.py  test_lead_management.py  test_lead_scoring.py  test_margin_scorer.py  test_models.py  test_phase1_skeleton.py  test_phase2_leads.py  test_phase3_scoring.py  test_phase4_proposal.py  test_phase5_workspace.py  test_phase6_execution.py  test_proposal_drafting.py  test_proposal_validator.py  test_pull_ingestion.py  test_reports.py  test_reputation.py  test_safety.py  test_scaffold.py  test_scoring_engine.py  test_sources.py  test_tuner.py  test_weekly_report.py  test_workspace_creation.py
tests/fixtures/: mixed_alert.mbox  sample_leads.csv  upwork_alert.eml
(+48 files in other folders)
