[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freelance-os"
version = "0.1.0"
description = "Local-first freelance operating system — AI prepares, human commits."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "sqlmodel>=0.0.19",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
freelance-os = "freelance_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/freelance_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
