[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freelance-os"
version = "0.1.0"
description = "Local-first, human-in-the-loop freelance operating system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.12.0",
    "sqlmodel>=0.0.19",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "httpx>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
freelance-os = "freelance_os.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/freelance_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
